# ZMQ

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  main.cpp
publisher/: CMakeLists.txt  Dockerfile  data_joiner.cpp  data_joiner.hpp  data_wrapper.cpp  data_wrapper.hpp  publisher.cpp  publisher.hpp
publisher/data/: student_file_1.txt  student_file_2.txt
subscriber/: CMakeLists.txt  Dockerfile  structure_data_maker.cpp  structure_data_maker.hpp  subscriber.cpp  subscriber.hpp
